<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.anylogic</groupId>
    <artifactId>alpyne</artifactId>
    <packaging>jar</packaging>
    <version>1.2.0</version>
    <name>alpyne</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <jersey.version>3.0.2</jersey.version>
        <jmockit.version>1.49</jmockit.version>
        <anylogic8.base_version>8.8.6</anylogic8.base_version>
        <!-- <anylogic8.revision_hash>69c327fc</anylogic8.revision_hash> MODIFICATION -->
        <anylogic8.revision_hash>202312140435</anylogic8.revision_hash>
        <!-- IMPORTANT: both anylogic8.base_version and anylogic8.revision_hash together define the precise (carved in stone) artifacts version -->
        <anylogic8.artifacts_version>${anylogic8.base_version}-${anylogic8.revision_hash}</anylogic8.artifacts_version>
        <build_output_dir>${project.basedir}/build</build_output_dir>
        <build_output_dependencies_subdir>alpyne_lib</build_output_dependencies_subdir>
        <main_class>com.anylogic.alpyne.AlpyneServer</main_class>
        <!-- group and version of test artifacts, something we never change, since they are in the local mvn repo -->
        <test_artifacts_group>alpyne-test</test_artifacts_group>
        <test_artifact_all_models>all-models</test_artifact_all_models>
        <test_artifact_model_libs>model-libs</test_artifact_model_libs>
        <test_artifacts_version>1.0-SNAPSHOT</test_artifacts_version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.sf.py4j</groupId>
            <artifactId>py4j</artifactId>
            <version>0.10.9.7</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.6</version>
        </dependency>
        <!-- Redirect slf4j to the currently used java.util.logging: -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.6</version>
        </dependency>
        <!-- Simple console output for slf4j: -->
<!--
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.5</version>
        </dependency>
-->
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-http</artifactId>
            <version>${jersey.version}</version>   <!-- MODIFICATION -->
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>${jersey.version}</version>   <!-- MODIFICATION -->
        </dependency>

        <!-- Added to fix the startup warning: jakarta.activation.DataSource
        As per: https://mkyong.com/webservices/jax-rs/jakarta-activation-datasource-was-not-found/
        -->
        <dependency>
	      <groupId>jakarta.activation</groupId>
	      <artifactId>jakarta.activation-api</artifactId>
	      <version>2.0.1</version>
      	</dependency>

        <dependency>
            <groupId>com.github.victools</groupId>
            <artifactId>jsonschema-generator</artifactId>
            <version>4.31.1</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>1.0.87</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>commons-lang3</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- This is essential to get JSON support in the webserver: -->
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>${jersey.version}</version>   <!-- MODIFICATION -->
        </dependency>

        <!-- AnyLogic stuff - these dependencies have 'provided' scope, so that they are not exported.
             Instead, we will use the ones which come with the model exported from AnyLogic -->
        <dependency>
            <groupId>com.anylogic</groupId>
            <artifactId>anylogic-engine-editorapi</artifactId>
            <!-- <version>${anylogic8.artifacts_version}</version> MODIFICATION -->
            <version>${anylogic8.artifacts_version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.anylogic</groupId>
            <artifactId>nonmaven-com-anylogic-engine</artifactId>
            <!-- <version>${anylogic8.artifacts_version}</version> MODIFICATION -->
            <version>${anylogic8.artifacts_version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.anylogic</groupId>
            <artifactId>nonmaven-com-anylogic-rl</artifactId>
            <!-- <version>${anylogic8.artifacts_version}</version> MODIFICATION -->
            <version>${anylogic8.artifacts_version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.anylogic</groupId>
            <artifactId>anylogic-rl-data</artifactId> <version>${anylogic8.artifacts_version}</version>
            <scope>provided</scope>
        </dependency>       

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <version>${jmockit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.1.1</version>
            <scope>test</scope>
        </dependency>
        <!-- The following dependency is needed before 'model-libs' because otherwise tests fail with
             java.lang.ClassNotFoundException: com.querydsl.sql.RelationalPath
             ... looks like querydsl requires one of its original jars to be on classpath -->
        <dependency>
            <groupId>com.querydsl</groupId>
            <artifactId>querydsl-sql-codegen</artifactId>
            <version>5.0.0</version>
            <scope>test</scope>
        </dependency>
        <!-- The following two are from /testjars local repo (created using /testmodels/make-jars.sh) -->
        <!-- <dependency>
            <groupId>${test_artifacts_group}</groupId>
            <artifactId>${test_artifact_all_models}</artifactId>
            <version>${test_artifacts_version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>${test_artifacts_group}</groupId>
            <artifactId>${test_artifact_model_libs}</artifactId>
            <version>${test_artifacts_version}</version>
            <scope>test</scope>
        </dependency> MODIFICATION -->

        <!-- DEV helping dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency> MODIFICATION -->
        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>

        <plugins>
            <!-- Uber jar (maven-assembly-plugin) doesn't work here
                 (looks like 'jersey-media-json-jackson' can't configure itself and
                 we start getting errors like 'MessageBodyWriter not found for media type application/json'). -->

            <!-- So, we export dependency jars to ${build_output_dependencies_subdir} folder. -->

            <!-- First, we need to clear the output build folder (there might be obsolete jars there). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>   <!-- MODIFICATION -->
                <executions>
                    <execution>
                        <id>clear-build-output-folder</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                            <filesets>
                                <fileset>
                                    <directory>${build_output_dir}</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Then copy dependency jars and the main jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>   <!-- MODIFICATION -->
                <executions>
                    <execution>
                        <id>copy-dependency-jars</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${build_output_dir}/${build_output_dependencies_subdir}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>  <!-- MODIFICATION -->
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>${build_output_dependencies_subdir}/</classpathPrefix>
                            <mainClass>${main_class}</mainClass>
                        </manifest>
                    </archive>
                    <outputDirectory>${build_output_dir}</outputDirectory>
                </configuration>
            </plugin>

            <!-- Unit tests config -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <!-- The below javaagent spec. is needed to use jMockit library which allows mocking of static methods -->
                    <argLine>-javaagent:"${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar"</argLine>
                    <includes>
                        <include>**/*Spec.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <argLine>-Xmx1024m</argLine>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>

            <!-- Just in case, for running the app using mvn command... Maybe this is not really needed -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>${main_class}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <!-- <repository>
            <id>test-model-jars</id>
            <url>file://${project.basedir}/testjars</url>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>ignore</checksumPolicy>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository> MODIFICATION -->

        <!-- <repository>
            <id>central</id>
            <name>central</name>
            <url>https://registry.anylogic.com/repository/maven-public/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
        </repository> MODIFICATION -->
    </repositories>

    <pluginRepositories>
        <!-- <pluginRepository>
            <id>central</id>
            <name>central</name>
            <url>https://registry.anylogic.com/repository/maven-public/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository> MODIFICATION -->
    </pluginRepositories>

</project>
